deploy/local-kind/resources/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-operator
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
